white space issue fixed

--- a/main.css
+++ b/main.css
@@ -169,6 +169,7 @@ nav{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	margin-right:-15px;
 }
 
 #product-text{
@@ -196,6 +197,7 @@ nav{
 	padding: 5%;
 	padding-bottom: 10%;
 	padding-left: 10%;
+	margin-right:-15px;
 }
 
 #heading{
@@ -417,7 +419,7 @@ ul{
 	.line{
 		display: inline-block;
 		height: 1px;
-		width: 100px;
+		width: 70px;
 		background-color: black;
 	}
 	.logo-container{
@@ -435,7 +437,7 @@ ul{
 		position: relative;
 		text-transform: uppercase;
 		letter-spacing: 20px;
-		font-size: 3em;
+		font-size: 2em;
 		font-weight: bold;
 		color: rgba(139,147,147,0.4);
 		transform: rotate(90deg);
@@ -447,6 +449,10 @@ ul{
 
 	#cmpny-values p{
 		font-size: 0.8em;
+	}
+	
+	.sub-header{
+		font-size:3em;
 	}
 
 
